solve mucho refactiong

--- a/src/module/Radar/Templates/Legend.html
+++ b/src/module/Radar/Templates/Legend.html
@@ -1,5 +1,5 @@
 <h1>${legend.label}</h1>
-<div class="label-container">
+<div class="label-container" data-index="${legend.index}">
     ${radar.rings.items.map((r,i) => ringTemplate({scope:{
         index: i,
         ring: r,
