cleanup the radar (#35)
* cleanup the radar

* jojo new data

* remove console.log

* update from techlead jourfixe

* solve mucho refactiong

Co-authored-by: Willy Woitas <willy.woitas@neofonie.de>

--- a/src/module/Radar/Templates/Legend.html
+++ b/src/module/Radar/Templates/Legend.html
@@ -1,6 +1,6 @@
 <h1>${legend.label}</h1>
-<div class="label-container">
-    ${ radar.rings.items.map((r,i) => ringTemplate({scope:{
+<div class="label-container" data-index="${legend.index}">
+    ${radar.rings.items.map((r,i) => ringTemplate({scope:{
         index: i,
         ring: r,
         radar: radar,
