--- a/docs/radar.css
+++ b/docs/radar.css
@@ -43,3 +43,19 @@ td {
   vertical-align: top;
   padding-right: 60px;
 }
+
+.active-area {
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 0 20px 30px;
+}
+
+#active-title {
+  font-weight: bold;
+  margin-top: 0;
+}
+
+#active-timeline .date {
+  color: #aaa;
+  padding-right; 5px;
+}
