Add BI as discipline and support multi-discipline items

--- a/docs/radar.css
+++ b/docs/radar.css
@@ -56,3 +56,13 @@ a:hover {
 text[class^="legend"] {
   cursor: pointer;
 }
+
+.legend {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+}
+
+.legend div label {
+  cursor: pointer;
+}
