show new blips as stars and add optional table of ring descriptions

--- a/docs/radar.css
+++ b/docs/radar.css
@@ -17,3 +17,9 @@ td {
   vertical-align: top;
   padding-right: 60px;
 }
+.hover-underline {
+  text-decoration: none;
+}
+.hover-underline:hover {
+  text-decoration: underline;
+}
