--- a/docs/radar.css
+++ b/docs/radar.css
@@ -1,50 +1,22 @@
+
 body {
   font-family: 'Source Sans Pro', arial, helvetica, sans-serif;
-  padding: 0;
-  margin: 0;
-  min-height: 100vh;
+  padding-bottom: 50px;
 }
-
-.radar-container {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-#radar {
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 1;
-  max-width: 1000px;
-  margin: 0 auto;
-  display: block;
-}
-
 h3 {
   margin-top: 50px;
 }
-
 li {
   margin: 25px 50px 0 0;
 }
-
 table {
-  width: 100%;
-  max-width: 1200px;
-  margin: 20px auto;
-  border-collapse: collapse;
+  width: 1400px;
+  margin: 0 50px 0 50px;
 }
-
 td {
   width: 50%;
   vertical-align: top;
-  padding: 20px 40px;
-}
-
-ul {
-  padding-left: 20px;
+  padding-right: 60px;
 }
 .hover-underline {
   text-decoration: none;
